Modificando rutas de las img

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
     </div>
     <div class="containerF">
       <div class="box">
-        <img src="/assets/img/estudio1.png" alt="">
+        <img src="./assets/img/estudio1.png" alt="">
       </div>
      <div class="box">
-       <img src="/assets/img/estudio2.png" alt="">
+       <img src="./assets/img/estudio2.png" alt="">
      </div>
      <div class="box">
-       <img src="/assets/img/estudio3.png" alt="">
+       <img src="./assets/img/estudio3.png" alt="">
      </div>
      <div class="box">
-       <img src="/assets/img/estudio4.png" alt="">
+       <img src="./assets/img/estudio4.png" alt="">
      </div>
      <div class="box">
-       <img src="/assets/img/estudio5.png" alt="">
+       <img src="./assets/img/estudio5.png" alt="">
      </div>
      <div class="box">
-       <img src="/assets/img/estudio6.png" alt="">
+       <img src="./assets/img/estudio6.png" alt="">
      </div>
      <div class="box">
-      <img src="/assets/img/estudio7.png" alt="">
+      <img src="./assets/img/estudio7.png" alt="">
     </div>
     </div>
    </section>
@@ -112,7 +112,7 @@
       <div class="row justify-content-center ">
 
         <div class="card vinilos my-2" style="width: 18rem;">
-          <img src="/assets/img/vinilo1.png" class="card-img-top viniloEfect" alt="vinilo">
+          <img src="./assets/img/vinilo1.png" class="card-img-top viniloEfect" alt="vinilo">
           <div class="card-body ">
             <h5 class="card-title viniloTexto">Grabacion</h5>
             <h6 class="card-text">Grabacíón profesional de jazz , folclore, fusíon y rock. Sextetos de tango y nonetos de música contemporánea. Cuartetos de cuerdas, cuartetos vocales.</h6>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="card vinilos my-2" style="width: 18rem;">
-          <img src="/assets/img/viniloV.png" class="card-img-top viniloEfect" alt="vinilo">
+          <img src="./assets/img/viniloV.png" class="card-img-top viniloEfect" alt="vinilo">
           <div class="card-body">
             <h5 class="card-title viniloTexto">Mezcla</h5>
             <h6 class="card-text">Control room profesional. Se pueden realizar mezclas analógicas o mezclas híbridas con sumadores Neve y APi y todo el equipo analógico. Monitores de primer nivel.</h6>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="card vinilos my-2" style="width: 18rem;">
-          <img src="/assets/img/viniloA.png" class="card-img-top viniloEfect" alt="vinilo">
+          <img src="./assets/img/viniloA.png" class="card-img-top viniloEfect" alt="vinilo">
           <div class="card-body">
             <h5 class="card-title viniloTexto">Mastering</h5>
             <h6 class="card-text">Especializados en masterización profesional desde hace 20 años. Mastering analógico en tiempo real. Clase A. Mezclas en 5.1.</h6>
@@ -142,7 +142,7 @@
           </div>
         </div> 
         <div class="card vinilos my-2" style="width: 18rem;">
-          <img src="/assets/img/viniloA.png" class="card-img-top viniloEfect" alt="vinilo">
+          <img src="./assets/img/viniloA.png" class="card-img-top viniloEfect" alt="vinilo">
           <div class="card-body">
             <h5 class="card-title viniloTexto">DrumREC</h5>
             <h6 class="card-text">Especializados en masterización profesional desde hace 20 años. Mastering analógico en tiempo real. Clase A. Mezclas en 5.1.</h6>
