Agregando alt a las img

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
     </div>
     <div class="containerF">
       <div class="box">
-        <img src="./assets/img/estudio1.png" alt="">
+        <img src="./assets/img/estudio1.png" alt="Estudio1">
       </div>
      <div class="box">
-       <img src="./assets/img/estudio2.png" alt="">
+       <img src="./assets/img/estudio2.png" alt="Estudio2">
      </div>
      <div class="box">
-       <img src="./assets/img/estudio3.png" alt="">
+       <img src="./assets/img/estudio3.png" alt="Estudio3">
      </div>
      <div class="box">
-       <img src="./assets/img/estudio4.png" alt="">
+       <img src="./assets/img/estudio4.png" alt="Estudio4">
      </div>
      <div class="box">
-       <img src="./assets/img/estudio5.png" alt="">
+       <img src="./assets/img/estudio5.png" alt="Estudio5">
      </div>
      <div class="box">
-       <img src="./assets/img/estudio6.png" alt="">
+       <img src="./assets/img/estudio6.png" alt="Estudio6">
      </div>
      <div class="box">
-      <img src="./assets/img/estudio7.png" alt="">
+      <img src="./assets/img/estudio7.png" alt="Estudio7">
     </div>
     </div>
    </section>
