--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <i class="fas fa-bars"></i>
             </button>
           </div>
-    
+          
           <!-- links -->
           <div class="links-container">
             <ul class="links">
@@ -155,8 +155,8 @@
     </div>
    </section>
 
-   <section class="imagenEstudio mb-5">
-   
+   <section class="img-fluid">
+    <img src="./assets/img/banner3.png" alt="imgEstudio"  >
    </section>
 
  
