--- a/contacto.html
+++ b/contacto.html
@@ -42,10 +42,10 @@
               <a href="./index.html">home</a>
             </li>
             <li>
-              <a href="./index.html">Sobre Music</a>
+              <a href="./index.html#about">Sobre Music</a>
             </li>
             <li>
-              <a href="./index.html">Proyectos</a>
+              <a href="./index.html#projects">Proyectos</a>
             </li>
             <li>
               <a href="./contacto.html">Contacto</a>
