--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#projects">Proyectos</a>
               </li>
               <li>
-                <a href="./contacto.html">Contacto</a>
+                <a href="./assets/pages/contacto.html">Contacto</a>
               </li>
             </ul>    
           </div>
@@ -56,7 +56,7 @@
         <div class="container">
           <h1>Music Proyect</h1>
           <p>Este es un proyecto Front-end realizado para CodoACodo donde utilizamos tres tecnologias front como HTML, CSS y JavaScript</p>
-          <a href="./contacto.html" class="scroll-link btn btn-white">Solicita Presupuesto</a>
+          <a href="./assets/pages/contacto.html" class="scroll-link btn btn-white">Solicita Presupuesto</a>
         </div>
       </div>
     </header>
@@ -117,7 +117,7 @@
             <h5 class="card-title viniloTexto">Grabacion</h5>
             <h6 class="card-text">Grabacíón profesional de jazz , folclore, fusíon y rock. Sextetos de tango y nonetos de música contemporánea. Cuartetos de cuerdas, cuartetos vocales.</h6>
             <div class="d-flex justify-content-center">
-              <a href="./video.html" class="btn">Escuchar</a>
+              <a href="./assets/pages/video.html" class="btn">Escuchar</a>
             </div>
           </div>
         </div>
@@ -127,7 +127,7 @@
             <h5 class="card-title viniloTexto">Mezcla</h5>
             <h6 class="card-text">Control room profesional. Se pueden realizar mezclas analógicas o mezclas híbridas con sumadores Neve y APi y todo el equipo analógico. Monitores de primer nivel.</h6>
             <div class="d-flex justify-content-center">
-              <a href="./video-Mescla.html" class="btn">Escuchar</a>
+              <a href="./assets/pages/video-Mescla.html" class="btn">Escuchar</a>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
             <h5 class="card-title viniloTexto">Mastering</h5>
             <h6 class="card-text">Especializados en masterización profesional desde hace 20 años. Mastering analógico en tiempo real. Clase A. Mezclas en 5.1.</h6>
             <div class="d-flex justify-content-center">
-              <a href="./video-Mastering.html" class="btn ">Escuchar</a>
+              <a href="./assets/pages/video-Mastering.html" class="btn ">Escuchar</a>
             </div>
           </div>
         </div> 
@@ -147,7 +147,7 @@
             <h5 class="card-title viniloTexto">DrumREC</h5>
             <h6 class="card-text">Especializados en masterización profesional desde hace 20 años. Mastering analógico en tiempo real. Clase A. Mezclas en 5.1.</h6>
             <div class="d-flex justify-content-center">
-              <a href="./video-Drum.html" class="btn ">Escuchar</a>
+              <a href="./assets/pages/video-Drum.html" class="btn ">Escuchar</a>
             </div>
           </div>
         </div> 
@@ -163,7 +163,7 @@
    
    <!-- footer -->
    <footer class="section">
-    <p>copyrigth &copy; <a href="https://www.linkedin.com/in/diego-orona/">DiegoOroná</a><span id="date"></span></p>
+    <p>copyrigth &copy; <a href="https://www.instagram.com/diego_orona/" target="_blank">DiegoOroná</a><span id="date"></span></p>
     <div class="logoFooter">
       <a href="./index.html">
         <img src="./assets/img/logoFooter.png" alt="logo" class="logoImg">
