--- a/assets/pages/contacto.html
+++ b/assets/pages/contacto.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Proyect-Music</title>
+  <title>Contacto</title>
   <!-- Favicom -->
-  <link rel="icon" href="./assets/img/favicon.png">
+  <link rel="icon" href="../img/favicon.png">
   <!-- font-awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- styles -->
-  <link rel="stylesheet" href="./assets/css/contacto.css" />
+  <link rel="stylesheet" href="../css/contacto.css" />
 </head>
 
 <body>
@@ -25,9 +25,9 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <a href="./index.html">
+          <a href="../../index.html">
 
-            <img src="./assets/img/LogoM.png" alt="logo" class="logo">
+            <img src="../img/LogoM.png" alt="logo" class="logo">
           </a>
 
           <button class="nav-toggle">
@@ -39,16 +39,16 @@
         <div class="links-container">
           <ul class="links">
             <li>
-              <a href="./index.html">home</a>
+              <a href="../../index.html">home</a>
             </li>
             <li>
-              <a href="./index.html#about">Sobre Music</a>
+              <a href="../../index.html#about">Sobre Music</a>
             </li>
             <li>
-              <a href="./index.html#projects">Proyectos</a>
+              <a href="../../index.html#projects">Proyectos</a>
             </li>
             <li>
-              <a href="./contacto.html">Contacto</a>
+              <a href="#">Contacto</a>
             </li>
           </ul>
 
@@ -107,16 +107,16 @@
 
   <!-- footer -->
   <footer class="section">
-    <p>copyrigth &copy; <a href="https://www.linkedin.com/in/diego-orona/">DiegoOroná</a><span id="date"></span></p>
+    <p>copyrigth &copy; <a href="https://www.instagram.com/diego_orona/" target="_blank">DiegoOroná</a><span id="date"></span></p>
     <div class="logoFooter">
-      <a href="./index.html">
-        <img src="./assets/img/logoFooter.png" alt="logo" class="logoImg">
+      <a href="../../index.html">
+        <img src="../img/logoFooter.png" alt="logo" class="logoImg">
       </a>  
     </div>
   </footer>
   <!-- javascript -->
-  <script src="./app1.js"></script>
-  <script src="./contacto.js"></script>
+  <script src="../../app1.js"></script>
+  <script src="../../contacto.js"></script>
 </body>
 
 </html>
