--- a/assets/pages/video.html
+++ b/assets/pages/video.html
@@ -15,20 +15,20 @@
    <!-- Bootstrap -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <!-- styles -->
-   <link rel="stylesheet" href="./assets/css/video.css" />
+   <link rel="stylesheet" href="../css/video.css" />
 </head>
 <body>
 
     <section class="container">
-        <video class="video-container" controls autoplay loop src="./assets/video/bach.mp4"></video>
+        <video class="video-container" controls autoplay loop src="../video/bach.mp4"></video>
     </section>    
         
     
     <!-- footer -->
     <footer class="section">
       <div class="logo">
-        <a href="./index.html">
-          <img src="./assets/img/LogoM.png" alt="logo" class="logo">
+        <a href="../../index.html">
+          <img src="../img/LogoM.png" alt="logo" class="logo">
         </a>  
       </div>
       <p>copyrigth &copy; <a href="https://www.linkedin.com/in/diego-orona/">DiegoOroná</a></span></p>
